--- a/common_services/syndication_ear/pom.xml
+++ b/common_services/syndication_ear/pom.xml
@@ -32,18 +32,18 @@
     <parent>
         <artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.69-SNAPSHOT</version>
+		<version>1.0.69</version>
     </parent>
     <groupId>de.mpg.escidoc.services</groupId>
     <artifactId>syndication_ear</artifactId>
-    <version>1.0.53-SNAPSHOT</version>
+    <version>1.0.53</version>
     <name>syndication_ear</name>
     <packaging>ear</packaging>
 
     <scm>
-        <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/syndication_ear</connection>
-        <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/syndication_ear</developerConnection>
-        <url>https://subversion.mpdl.mpg.de/repos/common/</url>
+        <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.69/syndication_ear</connection>
+        <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.69/syndication_ear</developerConnection>
+        <url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.69/syndication_ear</url>
     </scm>
 
     <build>
@@ -329,47 +329,47 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.3.14-SNAPSHOT</version>
+            <version>1.3.14</version>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>common_logic</artifactId>
-            <version>1.1.69-SNAPSHOT</version>
+            <version>1.1.69</version>
             <scope>test</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>search_presentation</artifactId>
-        	<version>1.1.3-SNAPSHOT</version>
+        	<version>1.1.3</version>
         	<scope>test</scope>
         	<type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>syndication_presentation</artifactId>
-            <version>1.0.53-SNAPSHOT</version>
+            <version>1.0.53</version>
             <scope>test</scope>
             <type>war</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>search</artifactId>
-        	<version>1.1.3-SNAPSHOT</version>
+        	<version>1.1.3</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>structuredexportmanager</artifactId>
-        	<version>1.0.72-SNAPSHOT</version>
+        	<version>1.0.72</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>citationmanager</artifactId>
-        	<version>1.0.74-SNAPSHOT</version>
+        	<version>1.0.74</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
