--- a/common_services/pid_cache_presentation/pom.xml
+++ b/common_services/pid_cache_presentation/pom.xml
@@ -37,13 +37,13 @@
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>pid_cache_presentation</artifactId>
 	<name>pid_cache_presentation</name>
-	<version>0.1.32</version>
+	<version>0.1.33-SNAPSHOT</version>
 	<packaging>war</packaging>
 	
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/pid_cache_presentation-0.1.32</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/pid_cache_presentation-0.1.32</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/tags/pid_cache_presentation-0.1.32</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/pid_cache_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/pid_cache_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
 	</scm>
 	
 	<build>
