--- a/common_services/pid_cache_presentation/pom.xml
+++ b/common_services/pid_cache_presentation/pom.xml
@@ -86,13 +86,13 @@
 		<dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.3.14</version>
+            <version>1.3.15-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>common_logic</artifactId>
-            <version>1.1.69</version>
+            <version>1.1.70-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
