--- a/common_services/cone_presentation/pom.xml
+++ b/common_services/cone_presentation/pom.xml
@@ -115,13 +115,13 @@
 	    <dependency>
 	    	<groupId>de.mpg.escidoc.services</groupId>
 	    	<artifactId>cone</artifactId>
-	    	<version>1.2.27</version>
+	    	<version>1.2.30-SNAPSHOT</version>
 	    	<scope>provided</scope>
 	    </dependency>
 	    <dependency>
 	    	<groupId>de.mpg.escidoc.services</groupId>
 	    	<artifactId>common_logic</artifactId>
-	    	<version>1.1.68</version>
+	    	<version>1.1.70-SNAPSHOT</version>
 	    	<type>ejb</type>
 	    	<scope>provided</scope>
 	    </dependency>
